# fla

./: .clang-format  CMakeLists.txt  LICENSE  ast.cpp  ast.hpp  compile.c  compiler.c  compiler.cpp  compiler.h  compiler.hpp  lexer.c  lexer.cpp  lexer.h  lexer.hpp  main.c  main.cpp  parser.cpp  parser.hpp  token.h  token.hpp
.github/workflows/: build.yml  lint.yml
compiler/: CMakeLists.txt  ast.hpp  compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  parser_tests.cpp  token.hpp
compiler/tests/parser/: function.fla  namespace.orchid  use.orchid
scripts/: build  build.bat  fmt  test  test.bat
